# CursWork

OAiPCourseWorkSemester1/: CMakeLists.txt  ImgFile.qrc  clientplayer.cpp  clientplayer.h  clientplayer.ui  mainplayer.cpp  mainplayer.h  mainplayer.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  mylayout.cpp  mylayout.h  myloginmeniu.cpp  myloginmeniu.h  myloginmeniu.ui  myserver.cpp  myserver.h  paintscene.cpp  paintscene.h  workwithpixmap.cpp  workwithpixmap.h  writepuzzle.cpp  writepuzzle.h  writepuzzle.ui
